Fix styles for behind button

--- a/src/stylus/styles.styl
+++ b/src/stylus/styles.styl
@@ -439,11 +439,12 @@ footer
         span
             position absolute
             display inline-block
-            bottom -70px
+            width 220px
+            top 270px
             right 250px
             color white
             text-transform uppercase
-            font SemiBold 2em FiraSans
+            font SemiBold 2em/1.15 FiraSans
             text-align right
             text-shadow 0 0 20px rgba( black, 0.75 )
             &:before
